--- a/.github/workflows/update-free-rules.yml
+++ b/.github/workflows/update-free-rules.yml
@@ -26,6 +26,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install pyyaml
 
+      - name: Install sing-box
+        run: |
+          curl -fsSL https://sing-box.app/install.sh | sh
+
       - name: Download & convert AdBlock rules
         run: |
           python adblock_to_singbox.py
